# pqsql

./: .gitignore  COPYRIGHT.txt  GlobalSuppressions.cs  LICENSE  Pqsql-VS2015.csproj.old  Pqsql-VS2015.sln  Pqsql-VS2015.sln.old  Pqsql-VS2017.csproj  Pqsql-VS2017.sln  Pqsql.csproj  Pqsql.runsettings  Pqsql.runsettings.in  Pqsql.sln  PqsqlBinaryFormat.cs  PqsqlCommand.cs  PqsqlCommandBuilder.cs  PqsqlConnection.cs  PqsqlConnectionPool.cs  PqsqlConnectionStringBuilder.cs  PqsqlCopyBase.cs  PqsqlCopyFrom.cs  PqsqlCopyTo.cs  PqsqlDataAdapter.cs  PqsqlDataReader.cs  PqsqlDbType.cs  PqsqlDllMap.cs  PqsqlException.cs  PqsqlLargeObject.cs  PqsqlParameter.cs  PqsqlParameterBuffer.cs  PqsqlParameterCollection.cs  PqsqlProviderFactory.cs  PqsqlTextFormat.cs  PqsqlTransaction.cs  PqsqlTypeCode.cs  PqsqlTypeNames.cs  PqsqlTypeRegistry.cs  PqsqlUTF8Statement.cs  PqsqlUtils.cs  PqsqlWrapper.cs  (+3 more)
PqsqlTests/: PqsqlCommandBuilderTests.cs  PqsqlCommandTests.cs  PqsqlConnectionStringBuilderTests.cs  PqsqlConnectionTests.cs  PqsqlCopyFromTests.cs  PqsqlCopyToTests.cs  PqsqlDataAdapterTests.cs  PqsqlDataReaderTests.cs  PqsqlExceptionTests.cs  PqsqlLargeObjectTests.cs  PqsqlParameterBufferTests.cs  PqsqlParameterCollectionTests.cs  PqsqlProviderFactoryTests.cs  PqsqlTests-VS2015.csproj.old  PqsqlTests-VS2017.csproj  PqsqlTests.csproj  PqsqlTests.testsettings  PqsqlTestsInitialize.cs  PqsqlTypeRegistryTests.cs  PqsqlUtilsTest.cs  pg_service.conf
PqsqlTests/Properties/: AssemblyInfo.cs
Properties/: AssemblyInfo.cs  Pqsql.config
libpqbinfmt/: CMakeLists.txt  Findpq.cmake  README.txt  array.c  builtins.h  c.h  float.c  fmgr.h  libpqbinfmt-VS2015.vcxproj  libpqbinfmt-VS2017.vcxproj  libpqbinfmt.proj  libpqbinfmt.rc  libpqbinfmt.rc.in  libpqbinfmt.vcxproj  numeric.c  numeric.h  postgres.h  pq_types.h  pqbincopy.c  pqbincopy.h  pqbinfmt.c  pqbinfmt.h  pqbinfmt_array.c  pqbinfmt_composite_type.c  pqbinfmt_config.h  pqbinfmt_config.h.in  pqexpbuffer.h  pqparam_buffer.c  pqparam_buffer.h  pqparse.c  pqparse.h  resource.h
libpqbinfmt/common/: fe_memutils.c  fe_memutils.h
libpqbinfmt/fe_utils/: postgres_fe.h  psqlscan.c  psqlscan.h
libpqbinfmt/pgadt/: builtins.h  c.h  datetime.c  datetime.h  float.c  fmgr.h  fmgrprotos.h  numeric.c  numeric.h  pg_type.h  postgres.h  pqexpbuffer.h  timestamp.h
